--- a/Desafios/desafio-portfolio/style.css
+++ b/Desafios/desafio-portfolio/style.css
@@ -10,8 +10,6 @@
 
 div{
     background-color: #22202b;
-    border: 1px solid red;
-
 }
 
 #container{
@@ -19,7 +17,6 @@ div{
     background-color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 1fr 3fr;
-    column-gap: 60px;
 }
 
 #esquerda{
@@ -166,6 +163,7 @@ div{
 }
 
 .pasta{
+    background-color: #32303d;
     display: flex;
     align-items: center;
     font-size: 1.2em;
@@ -177,6 +175,7 @@ div{
 }
 
 .descricao{
+    background-color: #32303d;
     text-align: justify;
     padding: 30px 30px 30px 0px;
 }
@@ -187,16 +186,19 @@ div{
 }
 
 .estrela{
+    background-color: #32303d;
     display: flex;
     align-items: center;
 }
 
 .giticon{
+    background-color: #32303d;
     display: flex;
     align-items: center;
 }
 
 .iconesquerda{
+    background-color: #32303d;
     display: flex;
     align-items: center;
     column-gap: 20px;
@@ -208,6 +210,7 @@ div{
 }
 
 .bolajs{
+    background-color: #32303d;
     display: flex;
     align-items: center;
     justify-content: right;
@@ -220,4 +223,63 @@ div{
     border-radius: 50%;
     border: 2px solid #7f7b9e;
     margin-right: 5px;
+}
+
+#recents{
+    background-color: #32303d;
+    padding: 30px;
+    margin: 20px;
+    border-radius: 20px;
+    font-size: 1.2em;
+    font-weight: 500;
+}
+
+#erro{
+    background-color: #32303d;
+    padding: 30px;
+    margin: 20px;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+}
+
+#espacofoto{
+    background-color: #32303d;
+    display: flex;
+}
+
+#espacoletra{
+    background-color: #32303d;
+}
+
+#fotoperfil2{
+    width: 120px;
+    height: 120px;
+    background-image: url('./assets/foto.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    margin: auto;
+}
+
+#texterro{
+    background-color: #32303d;
+    font-size: 1.2em;
+    font-weight: 500;
+}
+
+.subtext{
+    font-size: 0.8em;
+    font-weight: 400;
+    margin: 5px 10px 5px 0px;
+}
+
+#texterro2{
+    margin-top: 20px;
+}
+
+#hashtags{
+    background-color: #32303d;
+    display: flex;
+    align-items: center;
 }
