--- a/Discover/ex009/style.css
+++ b/Discover/ex009/style.css
@@ -1,27 +1,42 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
+    font-family: arial, sans-serif;
 }
 
 body{
-    height: 100vh;
-    width: 100vw;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(46, 46, 46);
 }
 
-footer{
-    background-color: #d3d7e4;
-
-    height: 8rem;
-    font-size: 2em;
+header{
+    background-color: white;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+
+    padding: 50px 30px;
+}
+
+#logo{
+    font-weight: bolder;
+}
+
+nav{
+    display: flex;
+    gap: .8em;
+    align-items: center;
+}
+
+nav a:last-child{
+    background-color: #3918f0;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+a{
+    color: black;
+    text-decoration: none;
 }
