--- a/Discover/ex010/style.css
+++ b/Discover/ex010/style.css
@@ -1,24 +1,42 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
+    font-family: arial, sans-serif;
 }
 
 body{
-    height: 100vh;
-    width: 100vw;
+    background-color: rgb(46, 46, 46);
+}
+
+header{
+    background-color: white;
+
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    gap: 1rem;
+    padding: 50px 30px;
 }
 
-#coluna01{
-    background-color: blue;
-    flex-basis: 25%;
-
+#logo{
+    font-weight: bolder;
 }
 
-#coluna02{
-    background-color: red;
-    flex: 1;
+nav{
+    display: flex;
+    gap: .8em;
+    align-items: center;
+}
+
+nav a:last-child{
+    background-color: #3918f0;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+a{
+    color: black;
+    text-decoration: none;
 }
