--- a/Discover/ex011/style.css
+++ b/Discover/ex011/style.css
@@ -7,17 +7,18 @@
 body{
     height: 100vh;
     width: 100vw;
-}
-
-#galeria{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 0.8rem;
+
+    gap: 1rem;
 }
 
-.bloco{
+#coluna01{
+    background-color: blue;
+    flex-basis: 25%;
+
+}
+
+#coluna02{
     background-color: red;
-    width: 30%;
-    height: 200px;
+    flex: 1;
 }
