--- a/Discover/ex012/style.css
+++ b/Discover/ex012/style.css
@@ -7,40 +7,17 @@
 body{
     height: 100vh;
     width: 100vw;
-
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-#container{
+#galeria{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 50px;
+    gap: 0.8rem;
 }
 
-.botao{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    background-color: #3b16f8;
-    padding: 10px 20px;
-    margin-top: 50px;
-    border-radius: 5px;
-    line-height: 0;
-
-}
-
-.botao:hover{
-    cursor: pointer;
-}
-
-a{
-    font-size: 40px;
-    text-decoration: none;
-    color: white;
-}
-
-svg{
-    width: 50px;
-    color: white;
+.bloco{
+    background-color: red;
+    width: 30%;
+    height: 200px;
 }
