--- a/Discover/ex013/style.css
+++ b/Discover/ex013/style.css
@@ -8,20 +8,39 @@ body{
     height: 100vh;
     width: 100vw;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
     font-family: Arial, Helvetica, sans-serif;
 }
 
-footer{
-    background-color: #d3d7e4;
-
-    height: 8rem;
-    font-size: 2em;
-
+#container{
     display: flex;
     justify-content: center;
+    gap: 50px;
+}
+
+.botao{
+    display: flex;
     align-items: center;
+    gap: 10px;
+
+    background-color: #3b16f8;
+    padding: 10px 20px;
+    margin-top: 50px;
+    border-radius: 5px;
+    line-height: 0;
+
+}
+
+.botao:hover{
+    cursor: pointer;
+}
+
+a{
+    font-size: 40px;
+    text-decoration: none;
+    color: white;
+}
+
+svg{
+    width: 50px;
+    color: white;
 }
